@@ -1,3 +1,15 @@
+2004-01-28  Richard Henderson  <rth@redhat.com>
+                                                                                
+	* ggc.h (ggc_free): Declare.
+	* ggc-common.c (ggc_realloc): Use it.
+	* ggc-page.c: Remove lots of inline markers.
+	(globals): Add free_object_list.
+	(ggc_alloc): Tidy.
+	(ggc_free, validate_free_objects): New.
+	(poison_pages): Provide default.
+	(ggc_collect): Call validate_free_objects; emit markers to
+	the debug file.
+
 2004-01-19  Per Bothner  <per@bothner.com>
 
 	Move cpp_reader's line_maps field to a shared global.
